// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryWidget /> overrides the category color 1`] = `
.c0 {
  padding: 0;
  list-style: none;
}

.c3 {
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-flex: 30%;
  -ms-flex: 30%;
  flex: 30%;
  text-align: right;
  font-size: 12px;
  line-height: 20px;
}

.c2 {
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-flex: 70%;
  -ms-flex: 70%;
  flex: 70%;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: left;
}

.c5 {
  height: 4px;
  width: 100%;
  border-radius: 2px;
  background: #F5F5F5;
  position: relative;
}

.c5::after {
  content: '';
  width: NaN%;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  position: absolute;
  max-width: 100%;
  left: 0;
}

.ciKsuu > .c4::after {
  background: #47DB99;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  cursor: default;
  margin-bottom: 8px;
}

.c6 > .c4::after {
  background: #2C2C2C;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  cursor: default;
  margin-bottom: 8px;
}

.c1 > .c4::after {
  background: #FABADA;
}

<ul
  className="c0"
>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      China
    </p>
    <span
      className="c3"
    >
      359.0M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      United States of America
    </p>
    <span
      className="c3"
    >
      236.5M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      India
    </p>
    <span
      className="c3"
    >
      204.3M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Brazil
    </p>
    <span
      className="c3"
    >
      128.2M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Japan
    </p>
    <span
      className="c3"
    >
      89.7M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Russia
    </p>
    <span
      className="c3"
    >
      80.6M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Mexico
    </p>
    <span
      className="c3"
    >
      67.4M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Indonesia
    </p>
    <span
      className="c3"
    >
      48.4M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Pakistan
    </p>
    <span
      className="c3"
    >
      41.4M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c6"
    color="#FABADA"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Other
    </p>
    <span
      className="c3"
    >
      1.1G
    </span>
    <div
      className="c4 c5"
    />
  </li>
</ul>
`;

exports[`<CategoryWidget /> renders with data 1`] = `
.c0 {
  padding: 0;
  list-style: none;
}

.c3 {
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-flex: 30%;
  -ms-flex: 30%;
  flex: 30%;
  text-align: right;
  font-size: 12px;
  line-height: 20px;
}

.c2 {
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -webkit-flex: 70%;
  -ms-flex: 70%;
  flex: 70%;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: left;
}

.c5 {
  height: 4px;
  width: 100%;
  border-radius: 2px;
  background: #F5F5F5;
  position: relative;
}

.c5::after {
  content: '';
  width: NaN%;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: background 0.2s ease;
  transition: background 0.2s ease;
  position: absolute;
  max-width: 100%;
  left: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  cursor: default;
  margin-bottom: 8px;
}

.c1 > .c4::after {
  background: #47DB99;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  cursor: default;
  margin-bottom: 8px;
}

.c6 > .c4::after {
  background: #2C2C2C;
}

<ul
  className="c0"
>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      China
    </p>
    <span
      className="c3"
    >
      359.0M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      United States of America
    </p>
    <span
      className="c3"
    >
      236.5M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      India
    </p>
    <span
      className="c3"
    >
      204.3M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Brazil
    </p>
    <span
      className="c3"
    >
      128.2M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Japan
    </p>
    <span
      className="c3"
    >
      89.7M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Russia
    </p>
    <span
      className="c3"
    >
      80.6M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Mexico
    </p>
    <span
      className="c3"
    >
      67.4M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Indonesia
    </p>
    <span
      className="c3"
    >
      48.4M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c1"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Pakistan
    </p>
    <span
      className="c3"
    >
      41.4M
    </span>
    <div
      className="c4 c5"
    />
  </li>
  <li
    className="c6"
    color="#47DB99"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="c2"
    >
      Other
    </p>
    <span
      className="c3"
    >
      1.1G
    </span>
    <div
      className="c4 c5"
    />
  </li>
</ul>
`;

exports[`<CategoryWidget /> renders without crashing 1`] = `
.c0 {
  padding: 0;
  list-style: none;
}

<ul
  className="c0"
/>
`;
